--- a/core/ui/src/main/res/values/style_buttons.xml
+++ b/core/ui/src/main/res/values/style_buttons.xml
@@ -9,4 +9,14 @@
         <item name="cornerRadius">100dp</item>
     </style>
 
+
+    <style name="Button.Image" parent="Widget.Material3.Button.IconButton">
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="iconGravity">textStart</item>
+        <item name="iconTint">@null</item>
+    </style>
+
 </resources>
