Работа над feed страницой, фильтр

--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="primaryColor">#CB5242</color>
-    <color name="primaryDarkColor">#A4392B</color>
+    <color name="redMain">#CB5242</color>
+    <color name="redDark">#A4392B</color>
     <color name="primaryLightColor">#FFE6E2</color>
     <color name="surface">#FFCCC5</color>
     <color name="surface_pastel">#FFE6E2</color>
 
     <color name="white">#ffffff</color>
+    <color name="whiteSurface">#12500808</color>
+
+
     <color name="black">#000000</color>
+    <color name="blackText">#0E0A09</color>
     <color name="white_50">#80FFFFFF</color>
+
+
+
 
     <color name="transparent">#00FFFFFF</color>
 
