--- a/feature/feed/src/main/res/layout/fragment_feed.xml
+++ b/feature/feed/src/main/res/layout/fragment_feed.xml
@@ -13,12 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:src="@drawable/ic_logo"
         android:fitsSystemWindows="true"
+        android:src="@drawable/ic_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/primaryColor" />
+        app:tint="@color/redMain" />
 
     <com.google.android.material.search.SearchBar
         android:id="@+id/search"
@@ -32,15 +32,14 @@
         android:id="@+id/feedCard"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="16dp"
         android:clipChildren="false"
         android:clipToPadding="false"
+        android:padding="16dp"
         app:layout_constraintBottom_toTopOf="@+id/actions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search"
         tools:listitem="@layout/holder_feed_card" />
-
 
 
     <androidx.constraintlayout.helper.widget.Flow
@@ -49,9 +48,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="38dp"
         android:layout_marginBottom="100dp"
+        android:fitsSystemWindows="true"
         app:constraint_referenced_ids="filter,dislike,like,favorites"
         app:flow_horizontalStyle="spread_inside"
-        android:fitsSystemWindows="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -59,35 +58,38 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/filter"
-        style="@style/Button.Image"
+        style="@style/Button.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:iconSize="48dp"
-        app:icon="@drawable/ic_button_filter" />
+        app:icon="@drawable/ic_button_filter"
+        app:iconSize="48dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/dislike"
-        style="@style/Button.Image"
+        style="@style/Button.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:iconSize="76dp"
-        app:icon="@drawable/ic_button_dislike" />
+        app:icon="@drawable/ic_button_dislike"
+        app:iconSize="76dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/like"
-        style="@style/Button.Image"
+        style="@style/Button.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:iconSize="76dp"
-        app:icon="@drawable/ic_button_like" />
+        app:icon="@drawable/ic_button_like"
+        app:iconSize="76dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/favorites"
-        style="@style/Button.Image"
+        style="@style/Button.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:iconSize="48dp"
-        app:icon="@drawable/ic_button_favorites" />
+        app:icon="@drawable/ic_button_favorites"
+        app:iconSize="48dp" />
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
