--- a/core/ui/src/main/res/values/style_buttons.xml
+++ b/core/ui/src/main/res/values/style_buttons.xml
@@ -10,13 +10,31 @@
     </style>
 
 
-    <style name="Button.Image" parent="Widget.Material3.Button.IconButton">
+    <style name="Button.Icon" parent="Widget.Material3.Button.IconButton">
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetRight">0dp</item>
         <item name="iconGravity">textStart</item>
         <item name="iconTint">@null</item>
+    </style>
+
+    <style name="Button.Icon.Filled" parent="Widget.Material3.Button.IconButton.Filled">
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="iconGravity">textStart</item>
+        <item name="iconTint">@null</item>
+    </style>
+
+    <style name="Button.Segment" parent="Widget.Material3.Button.OutlinedButton">
+        <item name="android:minHeight">38dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="strokeColor">@color/redDark</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="android:textAppearance">@style/Text.Label.Small</item>
+        <item name="android:textColor">@color/blackText</item>
     </style>
 
 </resources>
