--- a/core/ui/src/main/res/values/style_shape.xml
+++ b/core/ui/src/main/res/values/style_shape.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="Circle" parent="">
+        <item name="cornerSize">50%</item>
+    </style>
+
     <style name="Rectangle_28" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">28dp</item>
