--- a/core/ui/src/main/res/values/themes.xml
+++ b/core/ui/src/main/res/values/themes.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="Theme.Filto" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/primaryColor</item>
-        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
+        <item name="colorPrimary">@color/redMain</item>
+        <item name="colorPrimaryDark">@color/redDark</item>
         <item name="colorAccent">@color/primaryLightColor</item>
 
 
