--- a/navigation/src/main/res/navigation/nav_graph_main.xml
+++ b/navigation/src/main/res/navigation/nav_graph_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_main"
     app:startDestination="@id/welcomeFragment">
 
@@ -17,6 +18,17 @@
     <fragment
         android:id="@+id/feedFragment"
         android:name="com.maxfin.filto.feed.FeedFragment"
-        android:label="FeedFragment" />
+        android:label="FeedFragment"
+        >
+        <action
+            android:id="@+id/action_feedFragment_to_feedFilterFragment"
+            app:destination="@id/feedFilterFragment" />
+    </fragment>
+
+    <dialog
+        android:id="@+id/feedFilterFragment"
+        android:name="com.maxfin.filto.feed.FeedFilterFragment"
+        android:label="FeedFilterFragment"
+        />
 
 </navigation>
