Работа над favorites страницой, recipe страницой

--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="blackText">#0E0A09</color>
     <color name="white_50">#80FFFFFF</color>
 
+    <color name="blue_dark">#3F3D56</color>
 
 
 
