--- a/core/ui/src/main/res/values/style_shape.xml
+++ b/core/ui/src/main/res/values/style_shape.xml
@@ -10,4 +10,9 @@
         <item name="cornerSize">28dp</item>
     </style>
 
+    <style name="Rectangle_16" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">16dp</item>
+    </style>
+
 </resources>
