Добавлен краткий список ингридиентов по клику на карточку

--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <color name="redMain">#CB5242</color>
     <color name="redDark">#A4392B</color>
-    <color name="primaryLightColor">#FFE6E2</color>
+    <color name="pinkSurface">#FFE6E2</color>
     <color name="surface">#FFCCC5</color>
     <color name="surface_pastel">#FFE6E2</color>
 
