--- a/core/ui/src/main/res/values/themes.xml
+++ b/core/ui/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/redMain</item>
         <item name="colorPrimaryDark">@color/redDark</item>
-        <item name="colorAccent">@color/primaryLightColor</item>
+        <item name="colorAccent">@color/pinkSurface</item>
 
 
         <item name="android:statusBarColor">@android:color/transparent</item>
