--- a/feature/feed/src/main/res/layout/fragment_feed.xml
+++ b/feature/feed/src/main/res/layout/fragment_feed.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+
+<data>
+
+    <variable
+        name="viewModel"
+        type="com.maxfin.filto.feed.FeedViewModel" />
+
+</data>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -25,6 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/logo" />
@@ -94,3 +105,5 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
