--- a/feature/recipe/src/main/res/layout/fragment_recipe.xml
+++ b/feature/recipe/src/main/res/layout/fragment_recipe.xml
@@ -84,7 +84,7 @@
                     android:text="@string/recipe_ingredients_title" />
 
                 <LinearLayout
-                    android:id="@+id/ownerAchievementsContainer"
+                    android:id="@+id/ingredientContainer"
                     formatIngredients="@{viewModel.uiState.meal.strIngredient}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
